0.05  Tue 24 Nov 2009
        - Removed Digest::CRC dependency, use md5 instead

0.04  Tue 24 Nov 2009
        - Removed MooseX::ClassAttribute dependency
        - Added reconnect retry counter

0.03  Sat 21 Nov 2009
        - Fixed a number of issues with reconnecting
        - Fixed issue adding new server from config window

0.02  Fri 20 Nov 2009
         - Switched to AnyEvent and Text::MicroTemplate
         - Removed other dependencies

0.01  Wed 19 Aug 2009
         - Initial release